[package]
name = "behindthename"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "API bindings for behindthename.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.6", features = ["blocking", "json"] }
governor = "0.3.2"
nonzero_ext = "0.3.0"
http = "0.2.5"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
url = "2.2.2"
serial_test = "0.5.1"
